--- a/src/style.css
+++ b/src/style.css
@@ -3,46 +3,53 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-  }
-  body {
+}
+
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     text-shadow: center;
-  
+
     background: #e8e3f0;
-  }
-  .container {
+}
+
+.container {
     width: 450px;
     height: 450px;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3), -2px -2px 2px #ffffff;
     text-align: center;
-  }
-  .container .title {
+}
+
+.container .title {
     margin: 20px;
-  }
-  .container .title h2 {
+}
+
+.container .title h2 {
     background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-  }
-  .container .row {
+}
+
+.container .row {
     position: relative;
     width: 100%;
     height: fit-content;
     padding: 10px;
     margin: 20px 0;
-  }
-  .container .row span {
+}
+
+.container .row span {
     position: absolute;
     top: 20px;
     left: 5rem;
     color: rgba(0, 0, 0, 0.8);
-  }
-  .container .row input {
+}
+
+.container .row input[type='text']{
     width: 78%;
     height: 40px;
     border-radius: 5px;
@@ -50,19 +57,44 @@
     border: none;
     padding: 20px;
     text-align: center;
-  }
-  .container .row input .invalid {
-    outline: 2px solid red;
-  }
-  .container .row input .valid {
-    outline: 2px solid red;
-  }
-  .container .row input::placeholder {
+    background-color: rgb(229, 229, 230);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3), -2px -2px 2px #ffffff;
+
+}
+.container .row input[type='text']:focus{
+    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.3),
+                     inset -2px -2px 2px #ffffff;
+
+}
+.row input:focus ~ span i {
+    display: none;
+}
+.emailErr ,
+.passwordErr{
+    color:  red;
+    position: absolute;
+    right: 25px;
+    bottom: 10px;
+    display: none;
+}
+.error{
+    display: flex;
+}
+
+
+.container .row input::placeholder {
     color: rgba(0, 0, 0, 0.8);
     float: left;
     margin-left: 2.6rem;
-  }
-  .container .row input[type="submit"] {
+}
+
+.container .row input[type="submit"] {
+    width: 78%;
+    height: 40px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    padding: 20px;
     background: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%);
     padding: 10px;
     color: #fff;
@@ -70,35 +102,52 @@
     font-family: Arial, inherit;
     transition: 0.5s;
     cursor: pointer;
-  }
-  .container .row input[type="submit"]:hover {
+}
+
+.container .row input[type="submit"]:hover {
     background: linear-gradient(90deg, #3f5efb 0%, #fc466b 100%);
-  }
-  .container .action .create-account {
+}
+
+.container .action .create-account {
     margin: 20px;
-  }
-  .container .action .create-account p {
-    font-size: 18px;
-  }
-  .container .action .create-account p a {
-    padding: 10px;
+}
+
+.container .action .create-account p {
     font-size: 20px;
+    
+}
+
+.container .action .create-account p a {
+    padding: 10px;
+    font-size: 22px;
     text-decoration: none;
     font-family: sans-serif;
-  }
-  .container .action .login-with ul {
+}
+
+.container .action .login-with ul {
     display: flex;
     justify-content: center;
-  }
-  
-  .container .action .login-with ul li {
+}
+
+.container .action .login-with ul li {
     margin: 20px;
-  }
-  .container .action .login-with ul li a i {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3), -2px -2px 2px #ffffff;
+    text-align: center;
+}
+.container .action .login-with ul li:hover{
+    box-shadow: inset 2px 2px 2px rgba(0,0,0,0.3);
+
+}
+.container .action .login-with ul li a i {
     font-size: 30px;
     transition: 500ms;
-  }
-  .container .action .login-with ul li a i:hover {
+    color: #fff;
+    margin-top: 20%;
+
+}
+.container .action .login-with ul li:hover a i {
     color: #f32170;
-  }
-  
+}
